# Simulicron

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  Default.parameters  LICENSE.txt  README.md  environment_working.yaml  setup.cfg  setup.py
.ipynb_checkpoints/: environment-checkpoint.yaml
Bioinformatics/: README.md
Dyet/src/: CMakeCache.txt  CMakeLists.txt  Makefile  argstream.h  base.cpp  base.h  cmake_install.cmake  dyet.h  element.cpp  element.h  exception.h  exportsystem.cpp  exportsystem.h  gamete.cpp  gamete.h  gamete.inl  generator.cpp  generator.h  genome.cpp  genome.h  importsystem.cpp  importsystem.h  indivgroup.cpp  indivgroup.h  individu.inl  individual.cpp  individual.h  individual.inl  main.cpp  parameters.cpp  parameters.h  population.cpp  population.h  population.inl  recombination.cpp  recombination.h  recombination.inl  simul.cpp  simul.h  species.cpp  (+7 more)
Dyet/src/.deps/: base.P  genome.P  parameters.P
Figure1/: Figure1.ipynb  Figure1.py
Figure2/: Figure2_0.py  Figure2_1000.py  Figure2_300.py  etaVsEpi.ipynb
Figures/: Default.parameters  Figure1-draw.R  Figure1.py  Figure2-draw.R  Figure2.py  Figure3-draw.R  Figure3.py  common.py
Notebooks/: December062019.ipynb  Recombination.ipynb  Selection.ipynb  Selection.txt  SimulationInit.ipynb  TrFrame.ipynb  Trial.ipynb  UnitTests.txt
Project_1C/: Arnaud.py  etaVsHG.py  etaVsSel.ipynb  etaVsTR.ipynb  etaVsTr.py  simulationDriver.py
Simulations/: README.md
Supplementary_data/: Supplementary_Table_3.csv
docs/: Makefile  conf.py  index.rst
notebooks/: 1_ST_UNIT_TESTS.html  1_ST_UNIT_TESTS.ipynb  (+96 more)
(+364 files in other folders)
